--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,16 @@
 
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G 
 org.gradle.daemon=false
+org.gr
 
-
-
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.21)
-forge_version=50.1.0
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.3.0
 forge_version_range=[0,)
 loader_version_range=[0,)
 
 mapping_channel=parchment
-mapping_version=2024.06.16-1.20.6
+mapping_version=2023.09.03-1.20.1
 
 mod_id=fogy
 mod_name=No name yet
