--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 
 org.gradle.jvmargs=-Xmx3G 
 org.gradle.daemon=false
-org.gr
+org.gradle.java.home=D:\\Java\\JRE17
 
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
