--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ minecraft {
     // enableEclipsePrepareRuns = true
     copyIdeResources = true
     // generateRunFolders = true
+    
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
         configureEach {
