--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ mod_name=No name yet
 mod_license=All Rights Reserved
 mod_version=0.0.1
 mod_group_id=fogy
-mod_authors=Nikita
+mod_authors=me
 mod_description=No description yet
